[package]
name = "SolanaNFTTokenizer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_tokenizer"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = { version = "0.19.0"}
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
